# KrampUI

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Compoments/: Dropdown.ts  Topbar.ts
src/Managers/: SettingsManager.ts
src/Services/: FilesystemService.ts
src/assets/scripts/: main.js  main.ts
src/assets/scripts/Components/: ChooseExecutable.ts  Dropdown.ts  Events.ts  ExecutorButtons.ts  Login.ts  Maximized.ts  PreventEvents.ts  SetVersion.ts  SettingsDropdown.ts  Topbar.ts
src/assets/scripts/Functions/: GetDirectory.ts  OnClick.ts  RandomString.ts  RoundNumber.ts
src/assets/scripts/Managers/: CredentialsManager.ts  EditorManager.ts  LoaderManager.ts  SettingsManager.ts  TabManager.ts  TabsManager.ts  TabsUIManager.ts  UIManager.ts  WindowManager.ts
src/assets/scripts/Services/: FilesystemService.ts  WindowService.ts
src/assets/styles/: main.css
