[package]
name = "krampui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
sysinfo = "0.30.7"
serde_json = "1"
rdev = "0.5.3"
ws = "0.9.2"
lazy_static = "1.4.0"
regex = "1"
colored = "2.1.0"
win-msgbox = "0.1.3"
open = "5.1.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "process"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
